--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,15 +41,15 @@ install:
   - conda info
   # this is to ensure dependencies
   - conda build conda.recipe --no-test
-  - conda install --use-local p4_tools
+  - conda install --use-local p4tools
 
 
 # Not a .NET project, we build package in the install step instead
 build: false
 
 test_script:
-  - py.test --color=yes -v --cov p4_tools --cov-report xml tests
+  - py.test --color=yes -v --cov p4tools --cov-report xml tests
 
 on_success:
   - conda install -c conda-forge codecov
-  - codecov --env PYTHON_VERSION --file C:\projects\p4_tools\coverage.xml
+  - codecov --env PYTHON_VERSION --file C:\projects\p4tools\coverage.xml
