--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ tag = True
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:p4_tools/__init__.py]
+[bumpversion:file:p4tools/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
