--- a/settings.ini
+++ b/settings.ini
@@ -9,7 +9,7 @@ author = Michael Aye
 author_email = kmichael.aye@gmail.com
 branch = master
 min_python = 3.9
-version = 0.9.1
+version = 0.9.2
 audience = Developers
 language = English
 custom_sidebar = False
@@ -34,4 +34,5 @@ jupyter_hooks = True
 clean_ids = True
 clear_all = False
 put_version_in_init = True
+custom_quarto_yml = False
 
