Removed old filepath functions, now using only the datapath

--- a/notebooks/sidebar.yml
+++ b/notebooks/sidebar.yml
@@ -5,7 +5,11 @@ website:
       - 00_io.ipynb
       - 01_markings.ipynb
       - 02_plotting.ipynb
-      - 04_data_extract.ipynb
+      - 05_production.catalog.ipynb
+      - 05a_production.io.ipynb
+      - 05b_production.markings.ipynb
+      - 05c_production.metadata.ipynb
+      - 05d_production.projection.ipynb
       - examples.ipynb
       - plotting_examples.ipynb
       - regions.ipynb
