--- a/notebooks/_quarto.yml
+++ b/notebooks/_quarto.yml
@@ -1,37 +1,20 @@
-ipynb-filters: [nbdev_filter]
-
 project:
   type: website
-  output-dir: _docs
-  preview:
-    port: 3000
-    browser: false
 
 format:
   html:
     theme: cosmo
     css: styles.css
     toc: true
-    toc-depth: 4
 
 website:
-  title: "p4tools"
-  site-url: "https://michaelaye.github.io/p4tools/"
-  description: "Tools for working with data from the Planet Four Zooniverse project."
   twitter-card: true
   open-graph: true
-  repo-branch: master
-  repo-url: "https://github.com/michaelaye/p4tools"
   repo-actions: [issue]
   navbar:
     background: primary
     search: true
-    right:
-      - icon: github
-        href: "https://github.com/michaelaye/p4tools"
   sidebar:
-    style: "floating"
+    style: floating
 
-metadata-files: 
-  - sidebar.yml
-  - custom.yml
+metadata-files: [nbdev.yml, sidebar.yml]
