Update README and transition to markdown format; remove README.rst. Bump version to 0.10.1 and add new features for tile URL retrieval and subframe access. Enhance code documentation and clean up notebook examples.

--- a/settings.ini
+++ b/settings.ini
@@ -9,13 +9,13 @@ author = Michael Aye
 author_email = kmichael.aye@gmail.com
 branch = master
 min_python = 3.9
-version = 0.10.0
+version = 0.10.1
 audience = Developers
 language = English
 custom_sidebar = False
 license = apache2
 status = 2
-requirements = pandas pooch yarl matplotlib
+requirements = pandas pooch yarl matplotlib shapely
 tst_flags = notest
 nbs_path = notebooks
 doc_path = _docs
